<resources>
    <string name="app_name">Мои заявки</string>
    <string name="settings">Настройки</string>
    <string name="new_order_button">Новая заявка</string>
    <string name="connectline_strings">Строка подключения:</string>
    <string name="login_settings">Логин:</string>
    <string name="password_settings">Пароль:</string>
    <string name="client_order">Покупатель:</string>
    <string name="address_order">Адрес:</string>
    <string name="selected_products">Продукция:</string>
    <string name="send_order">Отправить заявку</string>
    <string name="save_order">Сохранить заявку</string>
    <string name="url_api">http://192.168.0.182</string>
    <string name="utdate_clients_button_settings">Обновить контрагентов</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_products_button_settings">Обновить номенклатуру</string>
    <string name="quantity_product">Введите нужное количество:</string>
    <string name="date_picker_title">Дата:</string>
    <string name="send_order_button">Отправить заявки</string>
    <string name="update_statuses">Обновить статусы заявок</string>
    <string name="save_settings">Сохранить настройки</string>
    <string name="message_server_is_not_recieve">Сервер не отвечает (failure)</string>
</resources>