<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client_order"/>

        <EditText
            android:id="@+id/client"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Какой-то клиент"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_order"/>

        <EditText
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Новоагарёва, ул. Неизвестного, 12 Вывеска 'Не входить!'"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selected_products" />

    <TableLayout
        android:id="@+id/table_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
    </TableLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text = "зав сл клуб 2"
        android:textSize="36sp"
        android:background="#D1EAF3"/>

    <TableLayout
        android:id="@+id/table_variants_of_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
    </TableLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_order" />
</LinearLayout>